Add jsapi to template

--- a/wagalytics/templates/wagalytics/dashboard.html
+++ b/wagalytics/templates/wagalytics/dashboard.html
@@ -33,6 +33,7 @@
 
 {% block extra_js %}
     {{ block.super }}
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script>
     gapi.analytics.ready(function() {
 
